# qlib-options

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: cron_daily.sh
scripts/: daily_collect.sh  daily_collect_task.xml
src/qlib_options/: __init__.py  __main__.py  cli.py  collector.py  factors.py  normalize.py  pipeline.py  qlib_bin.py  schemas.py  symbols.py
tests/unit/: test_cli.py  test_factors.py  test_qlib_bin.py  test_symbols.py
